@@ -76,6 +76,8 @@ documents those changes that are of interest to users and administrators.
  -- Fix invalid reads of size 1 due to non null-terminated string reads.
  -- Add extra debug2 logs to identify why BadConstraints reason is set.
  -- cons_res/job_test - prevent a job from overallocating a node memory.
+ -- cons_res/job_test - fix to consider a node's current allocated memory when
+    testing a job's memory request.
 
 * Changes in Slurm 18.08.6-2
 ============================
